async-zero-cost-templating/tests/ui/compile_fail/if_else_fail.stderr
error: expected identifier, found keyword `type`
 --> tests/ui/compile_fail/if_else_fail.rs:6:21
  |
6 |             <button type="submit"></button>
  |                     ^^^^
  |
note: while parsing attribute
 --> tests/ui/compile_fail/if_else_fail.rs:6:21
  |
6 |             <button type="submit"></button>
  |                     ^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing element
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error: expected one of: string literal, `if`, `for`, curly braces, `<`
 --> tests/ui/compile_fail/if_else_fail.rs:6:21
  |
6 |             <button type="submit"></button>
  |                     ^^^^
  |
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:21
  |
6 |             <button type="submit"></button>
  |                     ^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error: expected one of: string literal, `if`, `for`, curly braces, `<`
 --> tests/ui/compile_fail/if_else_fail.rs:6:25
  |
6 |             <button type="submit"></button>
  |                         ^
  |
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:25
  |
6 |             <button type="submit"></button>
  |                         ^^^^^^^^^^^^^^^^^^^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error: expected one of: string literal, `if`, `for`, curly braces, `<`
 --> tests/ui/compile_fail/if_else_fail.rs:6:34
  |
6 |             <button type="submit"></button>
  |                                  ^
  |
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:34
  |
6 |             <button type="submit"></button>
  |                                  ^^^^^^^^^^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error: expected identifier
 --> tests/ui/compile_fail/if_else_fail.rs:6:36
  |
6 |             <button type="submit"></button>
  |                                    ^
  |
note: while parsing element
 --> tests/ui/compile_fail/if_else_fail.rs:6:35
  |
6 |             <button type="submit"></button>
  |                                   ^^^^^^^^^
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:35
  |
6 |             <button type="submit"></button>
  |                                   ^^^^^^^^^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error: expected one of: string literal, `if`, `for`, curly braces, `<`
 --> tests/ui/compile_fail/if_else_fail.rs:6:36
  |
6 |             <button type="submit"></button>
  |                                    ^
  |
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:36
  |
6 |             <button type="submit"></button>
  |                                    ^^^^^^^^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error: expected one of: string literal, `if`, `for`, curly braces, `<`
 --> tests/ui/compile_fail/if_else_fail.rs:6:37
  |
6 |             <button type="submit"></button>
  |                                     ^^^^^^
  |
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:37
  |
6 |             <button type="submit"></button>
  |                                     ^^^^^^^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error: expected one of: string literal, `if`, `for`, curly braces, `<`
 --> tests/ui/compile_fail/if_else_fail.rs:6:43
  |
6 |             <button type="submit"></button>
  |                                           ^
  |
note: while parsing child
 --> tests/ui/compile_fail/if_else_fail.rs:6:43
  |
6 |             <button type="submit"></button>
  |                                           ^
note: while parsing children
 --> tests/ui/compile_fail/if_else_fail.rs:6:13
  |
6 |             <button type="submit"></button>
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: while parsing then branch
 --> tests/ui/compile_fail/if_else_fail.rs:5:22
  |
5 |           if condition {
  |  ______________________^
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing if
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level child
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^
note: while parsing top level children
 --> tests/ui/compile_fail/if_else_fail.rs:5:9
  |
5 | /         if condition {
6 | |             <button type="submit"></button>
7 | |         }
  | |_________^

error[E0425]: cannot find value `condition` in this scope
 --> tests/ui/compile_fail/if_else_fail.rs:5:12
  |
5 |         if condition {
  |            ^^^^^^^^^ not found in this scope
